--- a/EasyEvents/Base.lproj/Main.storyboard
+++ b/EasyEvents/Base.lproj/Main.storyboard
@@ -63,6 +63,36 @@
                                     <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kAG-KH-XmQ">
+                                <frame key="frameInset" minX="80" minY="523" width="75" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Wedding">
+                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <segue destination="8Er-oT-6Hv" kind="show" id="4g5-Ou-noB"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9gq-bj-PNj">
+                                <frame key="frameInset" minX="170" minY="523" width="75" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Birthday">
+                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <segue destination="JYL-WT-uqs" kind="show" id="9ET-dM-dRI"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Nfk-bf-xj6">
+                                <frame key="frameInset" minX="259" minY="523" width="75" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Business">
+                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <segue destination="G4R-Na-ast" kind="show" id="qoO-Mg-JYy"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
@@ -70,7 +100,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="JFi-pO-oNC" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-320.80000000000001" y="33.733133433283363"/>
+            <point key="canvasLocation" x="-321.73913043478262" y="33.423913043478265"/>
         </scene>
         <!--Pending Events-->
         <scene sceneID="XGu-T2-V9a">
@@ -144,6 +174,60 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kTU-5x-yuj" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="565.21739130434787" y="34.239130434782609"/>
+        </scene>
+        <!--Wedding View Controller-->
+        <scene sceneID="n8n-vd-mPG">
+            <objects>
+                <viewController id="8Er-oT-6Hv" customClass="WeddingViewController" customModule="EasyEvents" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="4OI-7x-i4I"/>
+                        <viewControllerLayoutGuide type="bottom" id="2Z8-OV-WsI"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="T2D-ji-k39">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="9Ms-CQ-yLJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="565" y="781"/>
+        </scene>
+        <!--Birthday View Controller-->
+        <scene sceneID="DU0-Dn-6M1">
+            <objects>
+                <viewController id="JYL-WT-uqs" customClass="BirthdayViewController" customModule="EasyEvents" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="DQT-nM-JBR"/>
+                        <viewControllerLayoutGuide type="bottom" id="qTI-8l-brS"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="lDy-Kz-hPW">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="VNN-s4-YWL" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1574" y="781"/>
+        </scene>
+        <!--Business View Controller-->
+        <scene sceneID="UDF-17-KUr">
+            <objects>
+                <viewController id="G4R-Na-ast" customClass="BusinessViewController" customModule="EasyEvents" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="CpT-ij-TNI"/>
+                        <viewControllerLayoutGuide type="bottom" id="7bF-FA-BvO"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Nbw-OR-fFk">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="v8R-EJ-4ET" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2554" y="781"/>
         </scene>
         <!--Event Checklist View Controller-->
         <scene sceneID="bda-6n-co8">
