--- a/EasyEvents/Base.lproj/Main.storyboard
+++ b/EasyEvents/Base.lproj/Main.storyboard
@@ -104,7 +104,7 @@
         <!--Pending Events-->
         <scene sceneID="XGu-T2-V9a">
             <objects>
-                <viewController id="eEb-GL-bld" customClass="HomeScreenViewController" customModule="EasyEvents" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="Pending Events" id="eEb-GL-bld" customClass="HomeScreenViewController" customModule="EasyEvents" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="4rn-7p-8MS"/>
                         <viewControllerLayoutGuide type="bottom" id="PN5-Tr-K8U"/>
@@ -121,6 +121,7 @@
                                     <barButtonItem title="Add Event" id="QKa-wQ-b2m">
                                         <connections>
                                             <action selector="AddEventButtonPressed:" destination="eEb-GL-bld" id="2z3-Or-Exb"/>
+                                            <segue destination="aNl-1h-1Gh" kind="show" identifier="AddEventSegue" id="qd6-3N-c8c"/>
                                         </connections>
                                     </barButtonItem>
                                 </items>
@@ -138,14 +139,14 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="FYJ-lF-gJv">
-                                                    <frame key="frameInset" minX="15" minY="5" width="33.333333333333336" height="20.333333333333332"/>
+                                                    <frame key="frameInset" minX="15" minY="5" width="33.5" height="20.5"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Subtitle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="nC3-ad-kKz">
-                                                    <frame key="frameInset" minX="14.999999999999996" minY="25.333333333333332" width="43.666666666666664" height="14.333333333333334"/>
+                                                    <frame key="frameInset" minX="15" minY="25.5" width="43.5" height="14"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                     <nil key="textColor"/>
@@ -163,9 +164,7 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Pending Events" id="MrK-eA-g1e">
-                        <barButtonItem key="backBarButtonItem" title="Events" id="0zA-dd-l8x"/>
-                    </navigationItem>
+                    <navigationItem key="navigationItem" title="Pending Events" id="4ov-S5-2fa" userLabel="Pending Events"/>
                     <connections>
                         <segue destination="3HD-uG-ikd" kind="show" identifier="ChecklistSegue" id="zza-JW-IFW"/>
                     </connections>
@@ -279,6 +278,71 @@
             </objects>
             <point key="canvasLocation" x="2553.6231884057975" y="780.97826086956525"/>
         </scene>
+        <!--Add Event-->
+        <scene sceneID="mzJ-o3-XGg">
+            <objects>
+                <viewController id="aNl-1h-1Gh" customClass="AddEventViewController" customModule="EasyEvents" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="xGi-pu-5rL"/>
+                        <viewControllerLayoutGuide type="bottom" id="Kdf-2M-HdS"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="cMC-Ap-kVK">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="XfV-cz-zjh">
+                                <frame key="frameInset" minX="20" minY="125" width="374" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <datePicker contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="date" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="8hr-Z7-PaM">
+                                <frame key="frameInset" minY="181" height="216"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <date key="date" timeIntervalSinceReferenceDate="500320258.186041">
+                                    <!--2016-11-08 17:50:58 +0000-->
+                                </date>
+                                <date key="minimumDate" timeIntervalSinceReferenceDate="441784800">
+                                    <!--2015-01-01 06:00:00 +0000-->
+                                </date>
+                            </datePicker>
+                            <pickerView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="gm2-uK-7lY">
+                                <frame key="frameInset" minY="405" height="216"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            </pickerView>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="8eW-nb-VOn">
+                                <frame key="frameInset" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                                <items>
+                                    <barButtonItem title="Cancel" id="8tJ-6h-2Km">
+                                        <connections>
+                                            <segue destination="eEb-GL-bld" kind="show" identifier="CancelSegue" id="DIm-bq-L4P"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="967-a4-M8Z"/>
+                                    <barButtonItem title="Add" id="eir-TT-zci">
+                                        <connections>
+                                            <segue destination="eEb-GL-bld" kind="show" identifier="AddSegue" id="xbY-jI-pEX"/>
+                                        </connections>
+                                    </barButtonItem>
+                                </items>
+                            </toolbar>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Add Event" id="XFY-6S-p88"/>
+                    <connections>
+                        <outlet property="EventPicker" destination="gm2-uK-7lY" id="6ZU-uu-usr"/>
+                        <outlet property="datePicker" destination="8hr-Z7-PaM" id="3J1-eG-BwI"/>
+                        <outlet property="eventPicker" destination="gm2-uK-7lY" id="cJh-hO-zns"/>
+                        <outlet property="titleTextField" destination="XfV-cz-zjh" id="WID-e2-AJM"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="LLh-zp-3pJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1573.913043478261" y="-735.32608695652175"/>
+        </scene>
         <!--Event Checklist View Controller-->
         <scene sceneID="bda-6n-co8">
             <objects>
@@ -335,4 +399,7 @@
         <image name="checkmark.png" width="500" height="500"/>
         <image name="date.png" width="256" height="256"/>
     </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="7N6-2n-l3a"/>
+    </inferredMetricsTieBreakers>
 </document>
